theming to ctools settings

--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -30,13 +30,12 @@ div.ctools-modal-content .modal-title {
   white-space: nowrap;
 }
 
-div.ctools-modal-content .modal-header {
+div.ctools-modal-content .modal-header, div.ctools-modal-content .modal-footer {
   background-color: #fff;
   padding: 0 1em;
   }
 
-div.ctools-modal-content .modal-header a {
-  color: white;
+div.ctools-modal-content .modal-header a, div.ctools-modal-content .modal-footer a {
   float: right;
 }
 
@@ -51,7 +50,6 @@ div.ctools-modal-content .modal-form {
 }
 
 div.ctools-modal-content a.close {
-  color: white;
 }
 
 div.ctools-modal-content a.close:hover {
