theming to ctools settings

--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -30,12 +30,12 @@ div.ctools-modal-content .modal-title {
   white-space: nowrap;
 }
 
-div.ctools-modal-content .modal-header, div.ctools-modal-content .modal-footer {
+div.ctools-modal-content .modal-header {
   background-color: #fff;
   padding: 0 1em;
   }
 
-div.ctools-modal-content .modal-header a, div.ctools-modal-content .modal-footer a {
+div.ctools-modal-content .modal-header a {
   float: right;
 }
 
