theming to ctools settings

--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -49,8 +49,16 @@ div.ctools-modal-content .modal-content {
 div.ctools-modal-content .modal-form {
 }
 
-div.ctools-modal-content a.close {
-}
+#modalContent a.close {
+  position:absolute;
+  display:block;
+  width: 55px;
+  height:45px;
+  background: url(images/close-ctools.png) no-repeat 0 0 transparent;
+  bottom: 27px;
+  right: 23px;
+  text-indent: -999em;
+  }
 
 div.ctools-modal-content a.close:hover {
   text-decoration: none;
