fix for some description fields

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -1,7 +1,7 @@
 /* Forms */
 
 
-.section-cp .fieldset-wrapper, .section-cp div.spaces-block-customizer,.section-cp div.description  {
+.section-cp .fieldset-wrapper, .section-cp div.spaces-block-customizer, .section-cp div.description  {
 	padding: 4px;
 	margin-bottom: 1.5em;
 	margin-left: 190px;
@@ -41,7 +41,7 @@
 	font-size: .9em;
 	}
 
-.section-cp .fieldset-wrapper div.description, .section-cp table div.description {
+.section-cp .fieldset-wrapper div.description, .section-cp table div.description, .section-cp .form-item div.description {
   margin-left: 0;
   padding: 0;
   margin-top: 3px;
