changes to content area

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -20,6 +20,25 @@
 	margin: 0;
   }
 
+.views-exposed-form .views-exposed-widget {
+  padding: 0 2em 0 0;
+  }
+
+#views-bulk-operations-submit {
+  padding: 0;
+  }
+
+select option {
+  padding: 2px 5px;
+  }
+
+.form-radios {
+  margin: 0 0 1em 0;
+  }
+
+.section-cp .form-radios input {
+  margin: 3px 3px 3px 0;
+  }
 
 .section-cp fieldset table tr {
   border: none;
