--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -43,3 +43,11 @@ div.teaser-checkbox div.form-item, div.form-item div.form-item, fieldset div.for
 	padding-top: 1.5em;
 	clear: both;
 	}
+
+select option {
+  padding: 2px 5px;
+  }
+
+.views-exposed-form .views-exposed-widget {
+  padding: 0 2em 0 0;
+  }
