--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
@@ -85,3 +85,7 @@ ul.theme-picker li.checked h3 {
   background: #f80000;
   color: #fff;
   }
+
+form#cp-settings-form fieldset {
+  display:none;
+  }
