--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -101,7 +101,9 @@ body.sidebar-right #cp-content {
   margin-left: 5px;
   }
 
-
+.views-admin-links {
+  float: right;
+  }
 
 /* First Column */
 
@@ -145,8 +147,8 @@ body.sidebar-right #cp-content {
 /* Exposed View Form */
 
 #cp-content .innerframe form#views-exposed-form-vsite-content-default {
-  margin: 0 0 10px 0;
-  padding: 20px;
+  margin: 0;
+  padding: 20px 20px 10px 20px;
   background:#EAEBE9;
   font-size: .8em;
   }
