lots of little things..

--- a/sites/all/modules/vsite/cp/theme/cp-toolbar.css
+++ b/sites/all/modules/vsite/cp/theme/cp-toolbar.css
@@ -1,3 +1,13 @@
+#cp-toolbar-toolbar, #cp-toolbar-user {
+  height: 40px;
+  }
+
+#cp-toolbar-toolbar li, #cp-toolbar-user li {
+  height: 40px;
+  line-height: 40px;
+  margin-top: 0;
+  }
+
 #cp-toolbar-toolbar {
   float: left;
   margin-left: 10px;
@@ -6,11 +16,6 @@
 #cp-toolbar-user  {
   float: right;
   margin-right: 10px;
-  }
-
-#cp-top-admin-menus li {
-  height: 36px;
-  margin-top: 6px;
   }
 
 #cp-toolbar-toolbar li {
@@ -38,6 +43,7 @@
   color:#ddd;
   display:block;
   height: 28px;
+  margin-top: 6px;
   }
 
 a#admin-link-cp-content {
