--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -225,3 +225,32 @@ span.buttons a.button {
   text-transform: lowercase;
   font-weight: bold;
   }
+
+
+/* Messages */
+
+div.messages {
+  background:#BBDDFF none repeat scroll 0 0;
+  border:1px solid #AACCEE;
+  color:#003366;
+  margin:0 0 10px;
+  padding:9px;
+  }
+
+div.warning {
+  background:#FFEE66 none repeat scroll 0 0;
+  border-color:#EEDD55;
+  color:#884400;
+  }
+
+div.error {
+  background:#EE6633 none repeat scroll 0 0;
+  border-color:#DD5522;
+  color:#FFFFFF;
+  }
+
+div.status {
+  background:#CCFF88 none repeat scroll 0 0;
+  border-color:#BBEE77;
+  color:#336600;
+  }
