added jcrop image

--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design-logo.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design-logo.css
@@ -50,3 +50,21 @@
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
   }
+
+.jcrop-holder, .logo-preview {
+  float: left;
+  }
+
+.logo-preview {
+  margin-left: 10px;
+  }
+
+.section-cp .logo-preview div.form-item label {
+  color: #777;
+  }
+
+.submit-crop {
+  clear: both !important;
+  padding-top: 10px;
+  margin-bottom: 1em;
+  }
