--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design-logo.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design-logo.css
@@ -51,7 +51,7 @@
 	-webkit-border-radius: 3px;
   }
 
-.jcrop-holder, .logo-preview {
+.jcrop-holder, #live_preview_box {
   float: left;
   }
 
@@ -59,7 +59,7 @@
   margin-left: 10px;
   }
 
-.section-cp .logo-preview div.form-item label {
+.section-cp #live_preview_box div.form-item label {
   color: #777;
   }
 
