--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design-shield-picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design-shield-picker.css
@@ -1,77 +1,15 @@
-div#cp-settings-shield div.select_wrapper{
-  height: 115px;
-  width: 115px;
-  margin: 0px;
-  margin-left: 0px;
-  border: 1px solid #ccc;
-  overflow: hidden;
-}
-
-div#cp-settings-shield div.form-radios{
-  margin-left: 0px;
-  width: 25000px;
-}
-
-div#cp-settings-shield div.form-radios div{
-  display:inline;
-  padding: 0px;
-  margin: 0px;
-}
-
-div#cp-settings-shield div.form-radios img{
-  display:inline;
-  background: #555;
-  padding: 0px;
-  margin: 0px 0px 0px 25px;
-}
-
-div#cp-settings-shield fieldset{
-  clear: left;
-}
-
-div#cp-settings-shield fieldset input{
-  display:none;
-}
-
-#next, #prev {
-  width: 15px;
-  height: 14px;
-  margin-top: 3px;
-}
-
-#next {
-  background: transparent url(images/next.png);
-}
-
-#prev {
-  background-image: url(images/prev.png);
-}
-
-.shield_subnav {
-  margin-top: 13px;
+#cp-settings-shield {
+  width: 735px;
   }
 
-.shield_subnav h3{
-	margin-right:10px;
-  clear: both;
-}
-  
-.shield_subnav ul, .shield_subnav li, #next, #prev {
+#cp-settings-shield fieldset {
+  border: none;
+  }
+
+#cp-settings-shield div.form-radios div.form-item {
   float: left;
-  margin-right: 10px;
-  }
-  
-.shield_subnav h3 {
-  margin-right: 40px;
-  }
- 
-.shield_subnav li {
-  cursor: pointer;
-  margin-right: 0;
-  font-size: 1.2em;
-  }
-  
-.shield_subnav li.active {
-  background: #f80000;
-  color: #fff;
+  width: 100px;
+  border: 1px solid #ccc;
+  text-align: center;
+  margin: 0 3px 3px 0;
   }
