shield and photo css

--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design-shield-picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design-shield-picker.css
@@ -12,4 +12,9 @@
   border: 1px solid #ccc;
   text-align: center;
   margin: 0 3px 3px 0;
+  padding: 20px 0;
   }
+
+div#cp-settings-shield fieldset input{
+  display:none;
+   }
