adding theming for cp bar in themes

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -25,6 +25,10 @@ body {
   background: #984949;
   }
 
+body.cp-toolbar-on {
+  margin-top: 42px;
+  }
+
 
 /* TYPE STYLES */
 
@@ -79,6 +83,15 @@ div.terms {
 
 #container { }
 
+#top {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 42px;
+	background:url(images/top-bottom-bg.png) repeat-x #000 0 -9px;
+	}
+
 #header-top, #navbar, #content-main, #header-main, #footer {
 	width: 100%;
 	}
@@ -114,6 +127,8 @@ div.terms {
 	padding-left: 20px;
 	padding-right:0;
 	}
+
+
 
 
 body.sidebar-right #content-wrapper {
