remove left col for features

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -61,6 +61,7 @@ body#tinymce {
   border-right: 1px solid #bfc6c6;
   }
 
+
 #cp-content {
   left: 201px;
   width: auto;
@@ -195,7 +196,7 @@ body.admin-menu #main-content {
   border: none;
   }
 
-
+/* SPECIFIC PAGE VIEWS */
 
 /**
  * BEGIN SITE INFO
@@ -226,3 +227,13 @@ body.admin-menu #main-content {
   * END Site INFO
   */
 
+
+/* FEATURES */
+
+body.page-cp-features #cp-sidemenu {
+  display:none;
+  }
+
+body.page-cp-features #cp-content {
+  left:0;
+  }
