--- a/sites/all/themes/cp_theme/spaces.css
+++ b/sites/all/themes/cp_theme/spaces.css
@@ -1,4 +1,10 @@
 /* SPACES FEATURES */
+
+table#spaces-features {
+  max-width: 1000px;
+  margin-left: 40px;
+  }
+
 form#spaces-preset-default-form h3,
 form#spaces-preset-form h3,
 form#spaces-features-form h3 {
