--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -140,3 +140,11 @@ a.close-this {
   margin-bottom: 14px;
   }
 
+
+/* Biblio Settings View */
+
+.modal_col {
+  float: left;
+  width: 40%;
+  margin-right: 50px;
+  }
