shield picker changes

--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design-shield-picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design-shield-picker.css
@@ -6,15 +6,26 @@
   border: none;
   }
 
-#cp-settings-shield div.form-radios div.form-item {
+.shield-picker li {
   float: left;
   width: 100px;
+  height: 80px;
   border: 1px solid #ccc;
   text-align: center;
   margin: 0 3px 3px 0;
   padding: 20px 0;
+  cursor: pointer;
   }
 
+.shield-picker li.checked {
+  border-color: red;
+  border-width: 2px;
+  width: 98px;
+  height: 78px;
+  margin-top: -1px;
+  }
+
+/*
 div#cp-settings-shield fieldset input{
   display:none;
-   }
+   }*/
