close button fix

--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -19,6 +19,7 @@ div.ctools-modal-content {
 #modal-content {
   border: none;
   background: #fff;
+  padding-bottom: 0;
   }
 
 
@@ -118,7 +119,7 @@ div.ctools-modal-content .resizable-textarea {
 
 
 #modalContent {
-  padding: 0 35px 35px 35px;
+  padding: 0 40px 40px 40px;
   background: transparent;
   }
 
@@ -130,7 +131,7 @@ div.ctools-modal-content .resizable-textarea {
   top:0;
   bottom: 0;
   left: 0;
-  width: 35px;
+  width: 40px;
   background: url(images/dropdown-window.png) repeat-x 0 100% transparent;
   }
 
@@ -142,9 +143,9 @@ div.ctools-modal-content .resizable-textarea {
 
 #ctools-bottom {
   width:auto;
-  height: 35px;
-  right: 35px;
-  left: 35px;
+  height: 40px;
+  right: 40px;
+  left: 40px;
   top: auto;
   background: url(images/dropdown-window-bot.png) repeat-x 0 100% transparent;
   }
