restyling taxonomy settings page

--- a/sites/all/modules/vsite/vsite_vocab/theme/vsite_vocab.css
+++ b/sites/all/modules/vsite/vsite_vocab/theme/vsite_vocab.css
@@ -1,7 +1,5 @@
-.block-vsite_vocab {
+#vsite-vocab-wrapper fieldset {
   clear: both;
-  border-top: 1px solid #939393;
-  padding-top: 2em;
   padding-bottom: 1em;
   margin-top: 2em;
   width:550px;
@@ -13,20 +11,21 @@
   margin-top: 0;
   }
 
-.block-vsite_vocab h3 {
+#vsite-vocab-wrapper legend {
   font-size: 1.1em;
   float: left;
   width: 250px;
   text-align: right;
   }
 
-.block-vsite_vocab .item-list {
+#vsite-vocab-wrapper .item-list {
   float: right;
   width:280px;
   padding-bottom: 2em;
+  margin-top: -1.7em;
   }
 
-.block-vsite_vocab .item-list ul li {
+#vsite-vocab-wrapper .item-list ul li {
   list-style: none;
   position: relative;
   margin-bottom: 6px;
@@ -34,22 +33,22 @@
   padding-left: 1.5em;
   }
 
-.block-vsite_vocab .item-list ul li a {
+#vsite-vocab-wrapper .item-list ul li a {
   color: #5a5959;
   }
 
-.block-vsite_vocab ul.admin {
+#vsite-vocab-wrapper ul.admin {
   position: relative;
   float: right;
   top: 0;
   }
 
-.block-vsite_vocab ul.admin li {
+#vsite-vocab-wrapper ul.admin li {
   float:left;
   margin-bottom: 0;
   padding-left: 3px;
   }
 
-.block-vsite_vocab .item-list ul li ul {
+#vsite-vocab-wrapper .item-list ul li ul {
   left: -27px;
   }
