final theming of features table

--- a/sites/all/themes/cp_theme/spaces.css
+++ b/sites/all/themes/cp_theme/spaces.css
@@ -1,8 +1,8 @@
 /* SPACES FEATURES */
 
 table#spaces-features {
-  max-width: 1000px;
-  margin-left: 40px;
+  padding-left: 200px;
+
   }
 
 form#spaces-preset-default-form h3,
@@ -20,7 +20,7 @@ table.spaces-features {
 table.spaces-settings div.description { white-space:normal; }
 
 table.spaces-features tr.enabled {
-  background: url(images/check-mark.png) no-repeat 31px 50%;
+  background: url(images/check-mark.png) no-repeat 140px 50%;
   }
 
 table.spaces-features th.action,
@@ -83,8 +83,8 @@ div.spaces-block-customizer strong.region {
 
 /*Features */
 
-#spaces-features td.name {
-  padding-left: 79px;
+#spaces-features td.name, #spaces-features thead.tableHeader-processed th:first-child {
+  padding-left: 200px;
   }
 
 #spaces-features a.tabledrag-handle {
