attempts at theming faq

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -238,3 +238,9 @@ body.page-cp-features #cp-sidemenu {
 body.page-cp-features #cp-content {
   left:0;
   }
+
+/* FAQ */
+
+.view-vsite-support-faq {
+  padding: 30px;
+  }
