shield picker changes

--- a/sites/all/modules/vsite/vsite_generic_settings/theme/vsite_generic_settings-shield-picker.css
+++ b/sites/all/modules/vsite/vsite_generic_settings/theme/vsite_generic_settings-shield-picker.css
@@ -1,8 +1,8 @@
-#cp-settings-shield {
+.shield_wrapper {
   width: 675px;
   }
 
-#cp-settings-shield fieldset {
+.shield_wrapper fieldset {
   border: none;
   }
 
