added  to CP Menu to keep consistent

--- a/sites/all/modules/vsite/cp/theme/cp-toolbar.css
+++ b/sites/all/modules/vsite/cp/theme/cp-toolbar.css
@@ -34,16 +34,18 @@
   }
 
 #cp-toolbar-toolbar li a {
-  padding-left: 30px;
+  padding-left: 30px !important;
   background-repeat: no-repeat;
   background-color: transparent;
-  font-size: 10px;
-  line-height: 24px;
-  font-weight: normal;
-  color:#ddd;
-  display:block;
+  font-size: 10px !important;
+  line-height: 24px !important;
+  font-weight: normal !important;
+  color:#ddd !important;
+  display:block !important;
   height: 28px;
-  margin-top: 6px;
+  margin-top: 6px !important;
+  font-style: normal !important;
+  font-family: arial, sans-serif !important;
   }
 
 a#admin-link-cp-content {
