added  to CP Menu to keep consistent

--- a/sites/all/modules/vsite/cp/theme/cp-toolbar.css
+++ b/sites/all/modules/vsite/cp/theme/cp-toolbar.css
@@ -46,6 +46,7 @@
   margin-top: 6px !important;
   font-style: normal !important;
   font-family: arial, sans-serif !important;
+  text-decoration:underline !important;
   }
 
 a#admin-link-cp-content {
