fixes to theme 05

--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -1,3 +1,7 @@
+html {
+  min-width: 960px;
+  }
+
 body {
     background: url(images/body-bg-no-sidebar.jpg) 50% 135px repeat-y #6d2a01;
     color:#666;
@@ -117,6 +121,7 @@ body.navbar #content-main {
 #header-main {
     background: url(images/crest.png) no-repeat transparent;
     padding-left: 133px !important;
+    min-height: 112px;
     }
 
 #header-right {
@@ -167,6 +172,7 @@ body.two-sidebars #header {
 #navbar {
   width: 900px;
   margin-left: 5px;
+  padding-left: 46px;
   }
 
 #navbar li {
