themed activity page

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -93,6 +93,8 @@ body.sidebar-right #cp-content {
   position: absolute;
   width: 100%;
   overflow: hidden;
+  top: 0;
+  bottom: 0;
   }
 
 #cp-content .innerframe form {
