--- a/sites/all/themes/cp_theme/tabs.css
+++ b/sites/all/themes/cp_theme/tabs.css
@@ -58,3 +58,47 @@
     color: #000;
     background-color: transparent;
   }
+
+.page-cp-news-activity #cp-content div.tabs, .page-cp-news-activity-me #cp-content div.tabs,
+.page-cp-news-activity-all #cp-content div.tabs {
+  width: 166px;
+  position:absolute;
+  background:#f2f3f3;
+  border-right: 1px solid #bfc6c6;
+  border-bottom: none;
+  top: 0;
+  left: 0;
+  bottom: 0px;
+  right: auto;
+  }
+
+.page-cp-news-activity #cp-content div.tabs ul, .page-cp-news-activity-me #cp-content div.tabs ul,
+.page-cp-news-activity #cp-content div.tabs li, .page-cp-news-activity-me #cp-content div.tabs li,
+.page-cp-news-activity-all #cp-content div.tabs ul,
+.page-cp-news-activity-all #cp-content div.tabs li {
+  padding: 0;
+  margin: 0;
+  display: block;
+  width: 166px;
+  }
+
+.page-cp-news-activity #cp-content div.tabs li a, .page-cp-news-activity-me #cp-content div.tabs li a,
+.page-cp-news-activity-all #cp-content div.tabs li a {
+  border-bottom:1px solid #BFC6C6;
+  color:#626161;
+  display:block;
+  font-size:14px;
+  padding:13px 23px;
+  }
+
+.page-cp-news-activity #cp-content div.tabs li.active a, .page-cp-news-activity-me #cp-content div.tabs li.active a,
+.page-cp-news-activity-all #cp-content div.tabs li.active a {
+  background:url(cp-sidemenu-active.png) repeat-x 0 100% #B8C0C0;
+  color: #000;
+  }
+
+.view-vsite-activity {
+  margin-left: 196px;
+  margin-top: 30px;
+  }
+
