changing region $cp_left to $left

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -72,6 +72,11 @@ body.sidebar-right #cp-content {
   right: 201px;
   }
 
+body.no-sidebars #cp-content, body.sidebar-right #cp-content {
+  left:0;
+  }
+
+
 #sidebar-right {
   width: 160px;
   padding: 35px 10px 0 30px;
@@ -230,16 +235,6 @@ body.admin-menu #main-content {
   * END Site INFO
   */
 
-
-/* FEATURES */
-
-body.page-cp-features #cp-sidemenu {
-  display:none;
-  }
-
-body.page-cp-features #cp-content {
-  left:0;
-  }
 
 /* FAQ */
 
