changes to body classes for tabs

--- a/sites/all/themes/cp_theme/tabs.css
+++ b/sites/all/themes/cp_theme/tabs.css
@@ -59,7 +59,8 @@
     background-color: transparent;
   }
 
-.page-cp-news-activity #cp-content div.tabs, .page-cp-news-activity-me #cp-content div.tabs,
+.page-cp-news #cp-content div.tabs,
+.page-cp-news-activity-me #cp-content div.tabs,
 .page-cp-news-activity-all #cp-content div.tabs {
   width: 166px;
   position:absolute;
@@ -72,8 +73,10 @@
   right: auto;
   }
 
-.page-cp-news-activity #cp-content div.tabs ul, .page-cp-news-activity-me #cp-content div.tabs ul,
-.page-cp-news-activity #cp-content div.tabs li, .page-cp-news-activity-me #cp-content div.tabs li,
+.page-cp-news #cp-content div.tabs ul,
+.page-cp-news-activity-me #cp-content div.tabs ul,
+.page-cp-news-activity #cp-content div.tabs li,
+.page-cp-news-activity-me #cp-content div.tabs li,
 .page-cp-news-activity-all #cp-content div.tabs ul,
 .page-cp-news-activity-all #cp-content div.tabs li {
   padding: 0;
@@ -82,7 +85,8 @@
   width: 166px;
   }
 
-.page-cp-news-activity #cp-content div.tabs li a, .page-cp-news-activity-me #cp-content div.tabs li a,
+.page-cp-news #cp-content div.tabs li a,
+.page-cp-news-activity-me #cp-content div.tabs li a,
 .page-cp-news-activity-all #cp-content div.tabs li a {
   border-bottom:1px solid #BFC6C6;
   color:#626161;
@@ -91,7 +95,8 @@
   padding:13px 23px;
   }
 
-.page-cp-news-activity #cp-content div.tabs li.active a, .page-cp-news-activity-me #cp-content div.tabs li.active a,
+.page-cp-news #cp-content div.tabs li.active a,
+.page-cp-news-activity-me #cp-content div.tabs li.active a,
 .page-cp-news-activity-all #cp-content div.tabs li.active a {
   background:url(cp-sidemenu-active.png) repeat-x 0 100% #B8C0C0;
   color: #000;
