changes to body classes for tabs

--- a/sites/all/themes/cp_theme/tabs.css
+++ b/sites/all/themes/cp_theme/tabs.css
@@ -93,12 +93,13 @@
   display:block;
   font-size:14px;
   padding:13px 23px;
+  font-weight: normal;
   }
 
 .page-cp-news #cp-content div.tabs li.active a,
 .page-cp-news-activity-me #cp-content div.tabs li.active a,
 .page-cp-news-activity-all #cp-content div.tabs li.active a {
-  background:url(cp-sidemenu-active.png) repeat-x 0 100% #B8C0C0;
+  background:url(images/cp-sidemenu-active.png) repeat-x 0 100% #B8C0C0;
   color: #000;
   }
 
