--- a/sites/all/themes/cp_theme/tabs.css
+++ b/sites/all/themes/cp_theme/tabs.css
@@ -101,6 +101,7 @@
 .page-cp-news-activity-all #cp-content div.tabs li.active a {
   background:url(images/cp-sidemenu-active.png) repeat-x 0 100% #B8C0C0;
   color: #000;
+  text-shadow: 0 1px 0 rgba(206, 214, 221, 0.75)
   }
 
 .view-vsite-activity {
