adding back overflowdeclarations which somehow got removed

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -12,6 +12,7 @@ body#tinymce {
 	background: #fff;
 	font-size: 1em;
 	margin: 10px;
+	overflow: auto;
 	}
 
 #container {
@@ -97,7 +98,7 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
 .innerframe {
   position: absolute;
   width: 100%;
-  overflow: hidden;
+  overflow: auto;
   top: 0;
   bottom: 0;
   }
